Add endpoints to get list of product types and product type details
